--- a/Rapport 1/rapport1.tex
+++ b/Rapport 1/rapport1.tex
@@ -82,7 +82,6 @@ The goal for this lab was measuring time, and comparing three methods of doing s
 
 \section{\label{sec:intro}Introduction}
 	The lab spanned 6 hours and consisted of measuring the period of a pendulum using three different methods of measurement; an hourglass, a stopwatch and a photo-diode connected to a computer. The experiments were performed by myself, and my lab partner Lars K. Skaarseth.
-	Before anything else, it is worth to note that the first experiment can largely be disregarded due to an error on our part, more on this in section \ref{subsubsect:strings}.
 
 \section{Theory}
 	The theory used in this lab report is almost entirely summed up by the following equations;
@@ -319,15 +318,15 @@ The goal for this lab was measuring time, and comparing three methods of doing s
 \section{Discussion}
 	\subsection{Theoretical period}
 		\subsubsection{Center of mass}
-		The first thing to consider, and compare the measured results against would be the theoretical period of the system. Since the pendulum is roughly symmetrical in certain planes, i will assume it is and only look for the vertical component of the center of mass. Using Equation \ref{eqn:cm} and my measurements in section \ref{subsect:len_dim} \footnote{The volume of the parts serve as the mass in this case, as the entire pendulum is made of the same material} i found that the center of mass of the pendulum is $\sim 7.79cm$ from the top of the pendulum. If i had disregarded the mass of the T-bracket the C.M of the cylinder would have been at $8cm\,(\pm0.1cm)$, meaning it may be more accurate to simply neglect accounting for the T-bracket in this case. When calculating the uncertainty in the CM when accounting for the T-bracket (which is very tedious to do) i found that only one of the volumes would have an uncertainty of $\pm 2mm$. So the total uncertainty would be so large that it simply makes more sense to "ignore" the T-bracket when calculating the period of the pendulum.	
+		The first thing to consider, and compare the measured results against would be the theoretical period of the system. Since the pendulum is roughly symmetrical in certain planes, i will assume it is and only look for the vertical component of the center of mass. Using Equation \ref{eqn:cm} and my measurements in section \ref{subsect:len_dim} \footnote{The volume of the parts serve as the mass in this case, as the entire pendulum is made of the same material} i found that the center of mass of the pendulum is $\sim 7.79cm$ from the top of the pendulum. If i had disregarded the mass of the T-bracket the C.M of the cylinder would have been at $8cm\,(\pm0.1cm)$, meaning it may be more accurate to simply neglect accounting for the T-bracket in this case. When calculating the uncertainty in the CM when accounting for the T-bracket (which is very tedious to do) i found that only one of the volumes would have an uncertainty of $\pm 2mm^3$. So the total uncertainty would be so large that it simply makes more sense to "ignore" the T-bracket when calculating the period of the pendulum.	
 		\subsubsection{Period}
 		Using equation \ref{eqn:period} along with the center of mass from the previous subsection i find that the theoretical period of the pendulum for the 52.9cm and 45.2cm strings respectively are 1.56s$(\pm 0.02)$ and 1.46s$(\pm 0.02)$ respectively. (Not accounting for the uncertainty that comes from my assumption that only the cylinder contributes to the C.M)
 
 	\subsection{The hourglass}
-		The most apparent problem with using the hourglass as a timekeeping tool is the rather large inconsistency it presents. While granted, we did only perform 3 readings of its duration using the pendulum, the spread of values we did get were rather significant with a standard deviation of 5 periods, equivalent of $\sim 8s$. The inconsistency of the hourglass was again observed when we timed it using a stopwatch (see table \ref{tab:hourglass_stopwatch}), observing a $12s$ difference between our two readings. This makes the hourglass a highly inconsistent, and inaccurate tool for measuring time in general.
+		The most apparent problem with using the hourglass as a timekeeping tool is the rather large inconsistency it presents. While granted, we did only perform 3 readings of its duration using the pendulum, the spread of values we did get were rather significant with a standard deviation of 5 periods, equivalent of $\sim 8s$. The inconsistency of the hourglass was again observed when we timed it using a stopwatch (see table \ref{tab:hourglass_stopwatch}), observing a $12s$ difference between our two readings. This makes the hourglass a highly inconsistent, and inaccurate tool for measuring time.
 
 	\subsection{The stopwatch}
-		In stark contrast to the hourglass, the stopwatch is a seemingly much more accurate tool for measuring time, with a standard deviation of only $0.1s$. While the stopwatch itself is, theoretically, an excellent tool for measuring the period of a pendulum in terms of its error, one does have to consider the effects of human error in this experiment, which ultimately is what makes up the inconsistency in these results. The person recording the period has to both react and judge when the pendulum is at its apex. Either way, the mean of our recordings divided by 10 results in a mean recorded period of 14.3s, while reasonably close to the theoretical period, it is outside of three standard deviations away from the mean.
+		In stark contrast to the hourglass, the stopwatch is a seemingly much more accurate tool for measuring time, with a standard deviation of only $0.1s$. While the stopwatch itself is, theoretically, an excellent tool for measuring the period of a pendulum in terms of its error, one does have to consider the effects of human error in this experiment, which ultimately is what makes up the inconsistency in these results. The person recording the period has to both react and judge when the pendulum is at its apex. Either way, the mean of our recordings divided by 10 results in a mean recorded period of 1.43s, while reasonably close to the theoretical period, it is outside of three standard deviations away from the mean.
 
 	\subsection{The photo-diode}
 		As expected, the digital, automated solution comes out as the most accurate and precise with a standard deviation in order of magnitude $10^{-4}s$ in ideal conditions (As in experiment no. 1 \& 2, table \ref{tab:photodiode}). The "ideal conditions" being very important here. As we tested in experiment no. 3, table \ref{tab:photodiode} changing the position of the photo diode can have a quite significant impact on the quality of data. Note the sudden significant jump in period at $\sim 100s$ in Fig. \ref{fig:data3}, where we aimed the photo-diode much further up on the cylinder. This "error" arose because the photo-diode no longer consistently reflected its light on the aluminum foil of the pendulum. So while the photo-diode is incredibly precise and accurate, it does require careful set up to ensure that it can make its recordings properly due to how inflexible it is. 
@@ -335,7 +334,7 @@ The goal for this lab was measuring time, and comparing three methods of doing s
 		Lastly, in regards to experiment no. 4. While it does have a standard deviation that is an order of magnitude higher than for 1 \& 2, this is likely due to the initial instability of the system after having received it's initial push. In retrospect, it would have been interesting to see how the period evolved in a longer timespan than just 120 seconds. The same goes for experiment 1 \& 2 as well, even though they are much more stable in general, it does seem that the readings has a tendency to converge after a while. 
  
 \section{Conclusion}
-	In summary, having compared the three different methods of measuring time, i think it's safe to disregard this particular hourglass as a reliable source of timekeeping. I would much rather trust my own counting than its timekeeping capabilities. As for the Stopwatch and photo-diode, i believe it's a case of what is being measured. For a uniform, controlled system such as this pendulum, the photo-diode is the most suitable and accurate of the two. Where as the Stopwatch is much more flexible in its usage, making it a much safer general choice for time keeping compared to the photo-diode, even though it is far less accurate and prone to human error.
+	In summary, having compared the three different methods of measuring time, i think it's safe to disregard this particular hourglass as a reliable source of timekeeping. I would much rather trust my own counting than its timekeeping capabilities. As for the Stopwatch and photo-diode, i believe it's a case of what is being measured. For a uniform, controlled system such as this pendulum, the photo-diode is the most suitable and accurate of the two. Where as the Stopwatch is much more flexible in its usage, making it a much safer default choice for time keeping compared to the photo-diode, even though it is far less accurate and prone to human error.
 
 \bibliography{rapport1_ref}
 
