--- a/Rapport 2/scripts/tables/uncertainhulta.tex
+++ b/Rapport 2/scripts/tables/uncertainhulta.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{| l | l | l |}
 \hline
- & x & \delta x \\
+ & $x$ & $\delta x$ \\
 \hline
 $l_a$                 & $119.5cm$ &    \\             
 $l_b$                 & $119.6cm$ &    \\        
