--- a/Rapport 2/scripts/tables/lendat.tex
+++ b/Rapport 2/scripts/tables/lendat.tex
@@ -1,16 +1,17 @@
-\begin{tabular}{rrrr}
+\begin{tabular}{rrrrrrrrr}
 \hline
-   Ruler, a [cm] &   Ruler, b [cm] &   Laser, a [cm] &   Laser, b [cm] \\
+Ruler & Ruler & Ruler & Ruler & Laser & Laser & Laser & Laser & Vernier Calliper \\
+   $l_a [cm]$ &  $\delta l_a$ [cm] &   $l_b$ [cm] &   $\delta l_b$ [cm] &   $l_a$ [cm] &   $\delta l_a$ [cm] & $l_b$ [cm] &   $\delta l_b$ [cm] & $l_{a, b}$ [mm] \\
 \hline
-          119.50 &          119.60 &          120.50 &          120.60 \\
-          119.50 &          119.70 &          119.60 &          119.80 \\
-          119.45 &          119.60 &          119.50 &          119.70 \\
-          119.40 &          119.50 &          119.40 &          119.60 \\
-          119.43 &          119.55 &          119.40 &          119.60 \\
-          119.40 &          119.60 &          119.68 &          119.72 \\
-          119.40 &          119.50 &          119.90 &          119.70 \\
-          119.45 &          119.65 &          130.60 &          130.20 \\
-          119.40 &          119.60 &          119.40 &          119.50 \\
-          119.43 &          119.55 &            	 &            	   \\
+           119.50 &              0.23 &           119.60 &              0.23 &           120.50 &              0.20 &           120.60 &              0.20 &                         1.25 $\pm 0.05$ \\
+           119.50 &              - &           119.70 &              - &           119.60 &              0.20 &           119.80 &              0.20 &                         - \\
+           119.45 &              0.37 &           119.60 &              0.37 &           119.50 &              0.20 &           119.70 &              0.20 &                         1.40 $\pm 0.05$\\
+           119.40 &              - &           119.50 &              - &           119.40 &              0.20 &           119.60 &              0.20 &                         - \\
+           119.43 &              0.40 &           119.55 &              0.40 &           119.40 &              0.20 &           119.60 &              0.20 &                         1.20 $\pm $0.6\\
+           119.40 &              0.20 &           119.60 &              0.20 &           119.68 &              0.20 &           119.72 &              0.20 &                         1.80 $\pm $0.05\\
+           119.40 &              0.27 &           119.50 &              0.27 &           119.90 &              0.20 &           119.70 &              0.20 &                         0.00 $\pm 0.05$\\
+           119.45 &              0.35 &           119.65 &              0.35 &           130.60 &              0.20 &           130.20 &              0.20 &                         1.80 $\pm $0.05\\
+           119.40 &              - &           119.60 &              - &           119.40 &              0.22 &           119.50 &              0.22 &                         - \\
+           119.43 &              0.31 &           119.55 &              0.31 &             - &              - &             - &              - &                         1.50 $\pm 0.05$\\
 \hline
 \end{tabular}
