--- a/Rapport 2/scripts/tables/uncertainhulta.tex
+++ b/Rapport 2/scripts/tables/uncertainhulta.tex
@@ -5,7 +5,7 @@
 $l_a$                 & $119.5cm$ &    \\             
 $l_b$                 & $119.6cm$ &    \\        
 $dl_s$                &     & $1.4mm$   \\             
-$\sqrt{n}\cdot dl_i$  &     & $0.5\sqrt{5}mm$   \\                  
+$\sqrt{n}\cdot dl_l$  &     & $0.5\sqrt{5}mm$   \\                  
 $dl_m$                &     & $1.4mm$   \\                  
 $\alpha l_a (T-25C)$  & $-0.156cm$ & $\sim 10^{-6}$   \\ 
 \hline                
@@ -14,7 +14,7 @@ $\alpha l_a (T-25C)$  & $-0.156cm$ & $\sim 10^{-6}$   \\
 
 \begin{tabular}{| l | l | l |}
 \hline
-& $\sum x$ & $\sum \sigma x_i^2$ \\
+& $\sum x_i$ & $\sqrt {\sum \sigma x_i^2 }$ \\
 \hline
 $\sum l_a$ & 119.48cm & 2.27 \\
 $\sum l_b$ & 119.58cm & 2.27 \\
