--- a/Rapport 2/scripts/tables/uncertainhulta.tex
+++ b/Rapport 2/scripts/tables/uncertainhulta.tex
@@ -12,11 +12,11 @@ $\alpha l_a (T-25C)$  & $-0.156cm$ & $\sim 10^{-6}$   \\
 
 \end{tabular}
 
-\begin{tabular}{| l | l | l |}
+\begin{tabular}{| p{60} | l | l |}
 \hline
 & $\sum x_i$ & $\sqrt {\sum \sigma x_i^2 }$ \\
 \hline
-$\sum l_a$ & 119.48cm & 2.27 \\
-$\sum l_b$ & 119.58cm & 2.27 \\
+$\sum l_a$ & 119.48cm & 2.27mm \\
+$\sum l_b$ & 119.58cm & 2.27mm \\
 \hline   
 \end{tabular}
